# UAPBackend

./: .gitignore  Dockerfile  compose.yml  pyproject.toml
authentication/: admin.py  auth.py  models.py  views.py
authentication/migrations/: 0001_initial.py  0002_resume.py  0003_userprofile_skill_userprofile_completed_course_and_more.py  0004_alter_user_user_type.py  0005_rename_skill_userprofile_skill.py  0006_employerprofile.py
config/: api.py  settings.py  urls.py
course/: admin.py  models.py  views.py
course/api/: skills.py  user.py
course/migrations/: 0001_initial.py  0002_lesson.py
